v0.4.3/src/zmsqlParse/zmsql4.java
/* Generated By:JavaCC: Do not edit this line. zmsql4.java */
package zmsqlParse;
import java.util.Vector;
import staticContent.*;
import dataBase.*;

public class zmsql4 implements zmsql4Constants {
  public static void main(String args []) throws ParseException
  {
    zmsql4 parser = new zmsql4(System.in);
    int j=0;
    Vector v=new Vector();
    Expression exp=new Expression(); //表达式
    ColumnDef coldef=new ColumnDef(); //列定义
    TableConstraint tc=new TableConstraint(); //表级限定
        TableContent tContent=new TableContent(); //表的内容
        DropTableInfo dti=new DropTableInfo(); //删除数据库表
        InsertIntoInfo iii=new InsertIntoInfo();//插入
        Delete de=new Delete();//删除符合条件的表的内容
        UpdateTable up=new UpdateTable();//更新表的内容
        SelectTable st=new SelectTable();//查询表的内容  
    try
    {
        //parser.expression(exp);//表达式
        //coldef=parser.GetColumnDef();//列定义
        ///tContent=parser.GetTableContent();//表的内容
        //tc=parser.GetTableConstraint();//表级限定
        //dti=parser.GetDropTable();//删除数据库表
        //iii=parser.GetInsertInto();//插入
        //de=parser.GetDelete();//删除符合条件的表的内容
                //up=parser.GetUpdate();//更新表的内容
        st=parser.GetSelect();//查询表的内容
        j=1;
    }
    catch (Exception e)
      {
        //System.out.println(e.getMessage());
      }

         if(0==j)
         {
                System.out.println("\u5339\u914d\u5931\u8d25!");
         }else{
            System.out.println("\u5339\u914d\u6210\u529f!\u005cn");//插入，删除，更新，查表
            //System.out.println("匹配成功!\n"); //删除表
            //System.out.println("匹配成功!\n"+tContent.getDescribe()); //表的内容
            //System.out.println("匹配成功!\n"+tc.getDescribe()); //表的约束
            //System.out.println("匹配成功!\n"+coldef.getDescribe()); //列的描述
                //System.out.println("匹配成功!表达式的大小为："+exp.getElements().size()); //表达式的大小
                try
                {
                    System.out.println((String)((Vector)st.exeSQL()).get(1));//查询表的内容
                    //System.out.println((String)((Vector)up.exeSQL()).get(1));//更新表的内容
                    //System.out.println((String)((Vector)de.exeSQL()).get(1));//删除符合条件的表的内容
                    //System.out.println((String)((Vector)iii.exeSQL()).get(1));//插入表
                    //System.out.println("表达式的值为:"+StaticMethod.calSimpleExp(v));
                        //System.out.println(StaticMethod.calExpression(exp.getElements()).getString());//表达式
                        //System.out.println((String)((Vector)tContent.executeSQL()).get(1));//表的内容
                        //System.out.println((String)((Vector)dti.exeSQL()).get(1));//删除表
                }
                catch (Exception e)
        {
                System.out.println(e.getMessage());
        }
         }
  }

  final public String GetNumericOperator() throws ParseException {
  Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ADD:
      t = jj_consume_token(ADD);
      break;
    case MINUS:
      t = jj_consume_token(MINUS);
      break;
    case MULTIPLY:
      t = jj_consume_token(MULTIPLY);
      break;
    case DIVIDE:
      t = jj_consume_token(DIVIDE);
      break;
    case MOD:
      t = jj_consume_token(MOD);
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return t.image;}
    throw new Error("Missing return statement in function");
  }

  final public String GetLogicOperator() throws ParseException {
  Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case GREAT:
      t = jj_consume_token(GREAT);
      break;
    case LESS:
      t = jj_consume_token(LESS);
      break;
    case EQUAL:
      t = jj_consume_token(EQUAL);
      break;
    case AND:
      t = jj_consume_token(AND);
      break;
    case OR:
      t = jj_consume_token(OR);
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return t.image;}
    throw new Error("Missing return statement in function");
  }

  final public void GetOperand(Expression exp) throws ParseException {
  Token t;
  Operand od = new Operand();
  Operand odm = new Operand();
  Variable var;
  Function f;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MINUS:
    case ICONSTANT:
    case FCONSTANT:
    case IDENTIFIER:
    case SCONSTANT:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MINUS:
        jj_consume_token(MINUS);
        odm.SetINT(-1);
        exp.addElement(odm);
        exp.addElement(Operator.get("*"));
        break;
      default:
        jj_la1[2] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ICONSTANT:
        t = jj_consume_token(ICONSTANT);
              od.SetINT(Integer.parseInt(t.image));
              exp.addElement(od);
        break;
      case FCONSTANT:
        t = jj_consume_token(FCONSTANT);
              od.SetFLOAT( Float.parseFloat(t.image));
              exp.addElement(od);
        break;
      case SCONSTANT:
        t = jj_consume_token(SCONSTANT);
              od.SetSTRING(t.image);
              exp.addElement(od);
        break;
      default:
        jj_la1[3] = jj_gen;
        if (jj_2_1(2)) {
          t = jj_consume_token(IDENTIFIER);
              var=new Variable(t.image);
              exp.addElement(var);
        } else if (jj_2_2(2)) {
          //函数
                      f = GetFunction();
          exp.addElement(f);
          //try{
            //	exp.addElement(f.eval()); //f.eval()返回Operand
           //}catch(Exception e) {
            // 	e.printStackTrace();
           //}

        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      break;
    case 54:
      jj_consume_token(54);
                           exp.addElement(Operator.get("("));
      subexpression(exp);
      jj_consume_token(55);
                           exp.addElement(Operator.get(")"));
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void OpPart(Expression  exp) throws ParseException {
  String opstr;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ADD:
    case MINUS:
    case DIVIDE:
    case MOD:
    case MULTIPLY:
      opstr = GetNumericOperator();
      exp.addElement(Operator.get(opstr));
      break;
    case GREAT:
    case LESS:
    case EQUAL:
    case AND:
    case OR:
      opstr = GetLogicOperator();
      exp.addElement(Operator.get(opstr));
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    GetOperand(exp);
  }

  final public void subexpression(Expression exp) throws ParseException {
    GetOperand(exp);
    label_1:
    while (true) {
      if (jj_2_3(2)) {
        ;
      } else {
        break label_1;
      }
      OpPart(exp);
    }
  }

  final public void expression(Expression exp) throws ParseException {
    GetOperand(exp);
    label_2:
    while (true) {
      if (jj_2_4(2)) {
        ;
      } else {
        break label_2;
      }
      OpPart(exp);
    }
    jj_consume_token(EOL);
  }

  final public Expression ParsePartExpression() throws ParseException {
  Expression exp = new Expression();
    subexpression(exp);
    {if (true) return exp;}
    throw new Error("Missing return statement in function");
  }

  final public Function GetFunction() throws ParseException {
  Function f;
  Token t;
  Expression exp;
    t = jj_consume_token(IDENTIFIER);
                        //将函数名称传递
    f = Function.get(t.image);
    f.SetName(t.image);
    jj_consume_token(54);
    //函数名后跟着()
      exp = ParsePartExpression();
    f.AddParam(exp);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 56:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_3;
      }
      jj_consume_token(56);
      exp = ParsePartExpression();
      f.AddParam(exp);
    }
    jj_consume_token(55);
    {if (true) return f;}
    throw new Error("Missing return statement in function");
  }

  final public ColumnDef GetColumnDef() throws ParseException {
  ColumnDef coldef=new ColumnDef();
  Token t;
  int i;
  Expression exp=new Expression();
    t = jj_consume_token(IDENTIFIER);
                      coldef.setColName(t.image);
    i = GetDataType();
                      coldef.setColType(i);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case UNIQUE:
      jj_consume_token(UNIQUE);
                 coldef.setUnique(true);
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOTNULL:
      jj_consume_token(NOTNULL);
                  coldef.setNotNull(true);
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PRIMARYKEY:
      jj_consume_token(PRIMARYKEY);
                     coldef.setPrimaryKey(true);
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SQLDEFAULT:
      jj_consume_token(SQLDEFAULT);
      exp = ParsePartExpression();
                                             coldef.setDefaultExp(exp);
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    {if (true) return coldef;}
    throw new Error("Missing return statement in function");
  }

  final public int GetDataType() throws ParseException {
  int i=-1;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      jj_consume_token(INT);
             i=DataType.INT;
      break;
    case FLOAT:
      jj_consume_token(FLOAT);
                i=DataType.FLOAT;
      break;
    case STRING:
      jj_consume_token(STRING);
                 i=DataType.STRING;
      break;
    case BOOL:
      jj_consume_token(BOOL);
               i=DataType.BOOL;
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return i;}
    throw new Error("Missing return statement in function");
  }

  final public TableConstraint GetTableConstraint() throws ParseException {
        Token t;
        Expression exp = new Expression();
        TableConstraint tc=new TableConstraint();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CONSTRAINT:
      jj_consume_token(CONSTRAINT);
      t = jj_consume_token(IDENTIFIER);
                                      tc.setTcName(t.image);
      break;
    default:
      jj_la1[12] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CHECK:
      jj_consume_token(CHECK);
      exp = ParsePartExpression();
                        tc.setTcType(3);
                        tc.addElement(exp);
      break;
    case PRIMARYKEY:
      jj_consume_token(PRIMARYKEY);
      jj_consume_token(54);
      t = jj_consume_token(IDENTIFIER);
                                tc.setTcType(1);
                        tc.addElement(t.image);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 56:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_4;
        }
        jj_consume_token(56);
        t = jj_consume_token(IDENTIFIER);
                                               tc.addElement(t.image);
      }
      jj_consume_token(55);
      break;
    case FOREIGNKEY:
      jj_consume_token(FOREIGNKEY);
                                 tc.setTcType(2);
      jj_consume_token(54);
      t = jj_consume_token(IDENTIFIER);
      jj_consume_token(55);
                                                   tc.addElement(t.image);
      jj_consume_token(REFERENCES);
      t = jj_consume_token(IDENTIFIER);
                                                  tc.addElement(t.image);
      jj_consume_token(54);
      t = jj_consume_token(IDENTIFIER);
      jj_consume_token(55);
                                                   tc.addElement(t.image); tc.addElement(1);tc.addElement(1);
      if (jj_2_5(2)) {
        jj_consume_token(ON);
        jj_consume_token(DELETE);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NOACTION:
          jj_consume_token(NOACTION);
          break;
        case RESTRICT:
          jj_consume_token(RESTRICT);
          break;
        case SETNULL:
          jj_consume_token(SETNULL);
                                                                         tc.setElement(3,2);
          break;
        case CASCADE:
          jj_consume_token(CASCADE);
                                                                                                             tc.setElement(3,3);
          break;
        default:
          jj_la1[14] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      } else {
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ON:
        jj_consume_token(ON);
        jj_consume_token(UPDATE);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NOACTION:
          jj_consume_token(NOACTION);
          break;
        case RESTRICT:
          jj_consume_token(RESTRICT);
          break;
        case SETNULL:
          jj_consume_token(SETNULL);
                                                                         tc.setElement(4,2);
          break;
        case CASCADE:
          jj_consume_token(CASCADE);
                                                                                                             tc.setElement(4,3);
          break;
        default:
          jj_la1[15] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[16] = jj_gen;
        ;
      }
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return tc;}
    throw new Error("Missing return statement in function");
  }

  final public TableContent GetTableContent() throws ParseException {
        ColumnDef coldef;
        TableConstraint tc;
        Token t;
        TableContent tContent=new TableContent();
    jj_consume_token(CREATE);
    jj_consume_token(TABLE);
    t = jj_consume_token(IDENTIFIER);
                                         tContent.settName(t.image);
    jj_consume_token(54);
    coldef = GetColumnDef();
                                        tContent.getvColumn().addElement(coldef);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 56:
        ;
        break;
      default:
        jj_la1[18] = jj_gen;
        break label_5;
      }
      jj_consume_token(56);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        coldef = GetColumnDef();
                                                  tContent.getvColumn().addElement(coldef);
        break;
      case PRIMARYKEY:
      case CHECK:
      case CONSTRAINT:
      case FOREIGNKEY:
        tc = GetTableConstraint();
                                                  tContent.getvConstraint().addElement(tc);
        break;
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(55);
    jj_consume_token(EOL);
                {if (true) return tContent;}
    throw new Error("Missing return statement in function");
  }

  final public DropTableInfo GetDropTable() throws ParseException {
  Token t;
  DropTableInfo dti=new DropTableInfo();
    jj_consume_token(DROP);
    jj_consume_token(TABLE);
    t = jj_consume_token(IDENTIFIER);
                                        dti.setsTablename(t.image);
    jj_consume_token(EOL);
    {if (true) return dti;}
    throw new Error("Missing return statement in function");
  }

  final public InsertIntoInfo GetInsertInto() throws ParseException {
  Token t;
  InsertIntoInfo iii=new InsertIntoInfo();
    jj_consume_token(INSERT);
    jj_consume_token(INTO);
    t = jj_consume_token(IDENTIFIER);
                                       iii.setsTablename(t.image);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 54:
      jj_consume_token(54);
      t = jj_consume_token(IDENTIFIER);
                       iii.addColumnname(t.image);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 56:
          ;
          break;
        default:
          jj_la1[20] = jj_gen;
          break label_6;
        }
        jj_consume_token(56);
        t = jj_consume_token(IDENTIFIER);
                           iii.addColumnname(t.image);
      }
      jj_consume_token(55);
      break;
    default:
      jj_la1[21] = jj_gen;
      ;
    }
    jj_consume_token(VALUES);
    jj_consume_token(54);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ICONSTANT:
      t = jj_consume_token(ICONSTANT);
      break;
    case IDENTIFIER:
      t = jj_consume_token(IDENTIFIER);
      break;
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                                         iii.addValue(t.image);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 56:
        ;
        break;
      default:
        jj_la1[23] = jj_gen;
        break label_7;
      }
      jj_consume_token(56);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ICONSTANT:
        t = jj_consume_token(ICONSTANT);
        break;
      case IDENTIFIER:
        t = jj_consume_token(IDENTIFIER);
        break;
      default:
        jj_la1[24] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                                             iii.addValue(t.image);
    }
    jj_consume_token(55);
    jj_consume_token(EOL);
    {if (true) return iii;}
    throw new Error("Missing return statement in function");
  }

  final public Delete GetDelete() throws ParseException {
        Delete de=new Delete();
        Token t;
    jj_consume_token(DELETE);
    jj_consume_token(FROM);
    t = jj_consume_token(IDENTIFIER);
                                             de.setsTablename(t.image);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case WHERE:
      jj_consume_token(WHERE);
      t = jj_consume_token(IDENTIFIER);
                                    de.setsColName(t.image);
      jj_consume_token(57);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ICONSTANT:
        t = jj_consume_token(ICONSTANT);
        break;
      case IDENTIFIER:
        t = jj_consume_token(IDENTIFIER);
        break;
      default:
        jj_la1[25] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                                                   de.setValue(t.image);
      break;
    default:
      jj_la1[26] = jj_gen;
      ;
    }
    jj_consume_token(EOL);
                {if (true) return de;}
    throw new Error("Missing return statement in function");
  }

  final public UpdateTable GetUpdate() throws ParseException {
  UpdateTable up=new UpdateTable();
  Token t;
    jj_consume_token(UPDATE);
    t = jj_consume_token(IDENTIFIER);
                                up.setsTablename(t.image);
    jj_consume_token(SET);
    t = jj_consume_token(IDENTIFIER);
                             up.addColname(t.image);
    jj_consume_token(57);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ICONSTANT:
      t = jj_consume_token(ICONSTANT);
      break;
    case IDENTIFIER:
      t = jj_consume_token(IDENTIFIER);
      break;
    default:
      jj_la1[27] = jj_gen;
